fix: Adjust font size for .text-5xl class on smaller screens

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -155,3 +155,9 @@ html {
 	background: #fff;
 	mask-image: paint(squircle);
 }
+
+@media (max-width: 767px) {
+	.text-5xl {
+		font-size: 2.5rem;
+	}
+}
